--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,8 @@
 }
 
 .formWrapper {
-  background: #282a36;
+  background: #1f1f21;
+/*   background: #282a36; */
   padding: 20px;
   border-radius: 10px;
   width: 500px;
